[Feat] base.html작성

--- a/templates/project/project.html
+++ b/templates/project/project.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+
+{% block title %}Project{% endblock %}
+
+{% block content %}
+
 <body id="project-page">
   <div id="Tab" style="height: 100%; position: relative">
     <!-- Project Menu -->
@@ -31,3 +37,4 @@
   
   </div>
 </body>
+{% endblock %}
